--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ install:
     - pip install -r requirements.txt
 before_script:
     - ./splitFile.sh books/bible.txt 2
-    - ./startServer.sh&
+    - (python -m SimpleHTTPServer)&
 script:
-    - find ./project -name \*.py -exec pep8 --ignore=E402 {} +
-    - coverage run project/test.py
+    - python testing/tests_mapreduce.py
 after_success:
     - bash <(curl -s https://codecov.io/bash)
 
