--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ before_script:
     - ./splitFile.sh books/bible.txt 2
     - (python -m SimpleHTTPServer)&
 script:
-    - python testing/tests_mapreduce.py
+    - coverage run testing/tests_mapreduce.py
 after_success:
-    - bash <(curl -s https://codecov.io/bash)
+    - codecov
 
 notifications:
     email: false
